--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,14 +3,14 @@ name: Deploy to Netlify with Terraform
 on:
   push:
     branches:
-      - main   # triggers on push to main branch
+      - main
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: Terraform   # 👈 points to your folder with .tf files
+        working-directory: Terraform  # folder with your .tf files
 
     steps:
       - name: Checkout repository
@@ -19,18 +19,28 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.6.6  # match your Terraform version
+          terraform_version: 1.6.6
+
+      - name: Terraform Login
+        env:
+          TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
+        run: terraform login -no-color
 
       - name: Terraform Init
+        env:
+          TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
         run: terraform init
 
       - name: Terraform Plan
+        env:
+          TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
         run: terraform plan
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
         env:
+          TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
           NETLIFY_TOKEN: ${{ secrets.NETLIFY_TOKEN }}
           TF_VAR_base_name: ${{ secrets.TF_VAR_base_name }}
           TF_VAR_tfc_organization: ${{ secrets.TF_VAR_tfc_organization }}
           TF_VAR_tfc_workspace: ${{ secrets.TF_VAR_tfc_workspace }}
+        run: terraform apply -auto-approve
