removing dup cloud retest

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy to Netlify with Terraform
 on:
   push:
     branches:
-      - main   # triggers when you push to main branch
+      - main
 
 jobs:
   terraform:
@@ -13,35 +13,24 @@ jobs:
         working-directory: Terraform   # folder containing your .tf files
 
     steps:
-      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Setup Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.6.6  # match your Terraform version
+          terraform_version: 1.6.6
 
-      # Step 3: Terraform Login (non-interactive)
-      - name: Terraform Login
-        env:
-          TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
-        run: terraform login -no-color -token=$TFC_TOKEN
-
-      # Step 4: Terraform Init
       - name: Terraform Init
         env:
           TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
         run: terraform init
 
-      # Step 5: Terraform Plan
       - name: Terraform Plan
         env:
           TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
         run: terraform plan
 
-      # Step 6: Terraform Apply (deploy to Netlify)
       - name: Terraform Apply
         env:
           TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
