--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,29 +13,32 @@ jobs:
         working-directory: Terraform   # folder containing your .tf files
 
     steps:
+      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Step 2: Setup Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
 
+      # Step 3: Terraform Init
       - name: Terraform Init
         env:
           TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
         run: terraform init
 
+      # Step 4: Terraform Plan
       - name: Terraform Plan
         env:
           TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
         run: terraform plan
 
+      # Step 5: Terraform Apply (deploy to Netlify)
       - name: Terraform Apply
         env:
           TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
           NETLIFY_TOKEN: ${{ secrets.NETLIFY_TOKEN }}
           TF_VAR_base_name: ${{ secrets.TF_VAR_base_name }}
-          TF_VAR_tfc_organization: ${{ secrets.TF_VAR_tfc_organization }}
-          TF_VAR_tfc_workspace: ${{ secrets.TF_VAR_tfc_workspace }}
         run: terraform apply -auto-approve
